# FileAnalyzer_GUI

./: .editorconfig  .env.example  .gitattributes  .gitignore  AI_FileAnalyze.txt  Automated Data Profiling Report Template.docx  README.md  pyproject.toml  requirements.txt  run_file_analyzer.bat  run_file_analyzer_debug.bat  run_generate_pipe_data.bat
sample/: LoanPop_small.txt  README.txt
scripts/: launch_gui_hidden.vbs  read_venv_from_dotenv.bat
src/: main.py
src/file_analyzer/: __init__.py  automated_profiling_report.py  config.py  duckdb_session.py  (+5 more)
templates/: CensusMeta.xlsx  LoanPop.xlsx  LoanPop_Buggy.xlsx  README.txt
tests/: conftest.py  test_applied_filters_line.py  test_automated_profiling_report.py  test_chart_click_filter_summary.py  test_chart_palette.py  test_config_default_paths.py  test_generate_pipe_data.py  test_grid_live_filter_ranges.py  test_grid_order_by_sql.py  test_measure_decimal_rounding.py  test_meta_excel.py  test_meta_field_panels.py  test_meta_parser.py  test_pie_chart_display.py  test_pivot_hierarchy.py  test_pivot_quick_stats_tooltips.py  test_quick_stats_null_count.py  test_quick_stats_type_bucket.py  test_quick_stats_yyyymmdd.py  test_status_load_time.py  test_summary_clipboard_html.py  test_summary_reports.py  test_visualize_chart_click_match.py  test_visualize_chart_filter_numeric.py  test_visualize_chart_pagination.py  test_visualize_chart_sort_order.py  test_visualize_source_lists.py  test_welcome_templates.py  test_yyyymmdd_display.py
tools/: build_file_analyzer_assets.py  generate_pipe_data.py  verify_app_steps.py
(+11 files in other folders)
