[project]
name = "file-analyzer"
version = "0.1.0"
description = "CSV/Pipe file analyzer with PyQt5 UI and metadata-driven insights."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "openpyxl>=3.1",
  "xlrd>=2.0",
  "duckdb>=0.10",
  "python-dotenv>=1.0",
  "plotly>=5.24",
  "pillow>=10.4",
  "pytest>=8.2",
]

[project.optional-dependencies]
ui = [
  "PyQt5>=5.15.10",
  "PyQtWebEngine>=5.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "W", "B", "I"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.black]
line-length = 100

